@@ -1,8 +1,10 @@
 package club.ttg.dnd5.domain.book.service;
 
+import club.ttg.dnd5.domain.book.rest.mapper.BookMapper;
 import club.ttg.dnd5.domain.book.model.Book;
 import club.ttg.dnd5.domain.book.model.TypeBook;
 import club.ttg.dnd5.domain.book.repository.BookRepository;
+import club.ttg.dnd5.domain.common.rest.dto.ShortResponse;
 import club.ttg.dnd5.domain.book.rest.dto.BookDetailResponse;
 import club.ttg.dnd5.domain.book.rest.mapper.BookMapper;
 import club.ttg.dnd5.exception.EntityNotFoundException;
@@ -12,6 +14,7 @@ import org.springframework.stereotype.Service;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -19,9 +22,12 @@ public class BookService {
     private final BookRepository bookRepository;
     private final BookMapper bookMapper;
 
-    public List<BookDetailResponse> getAllBooks() {
-        return bookRepository.findAll().stream().map(bookMapper::toDetailResponse).collect(Collectors.toList());
-    }
+    public List<ShortResponse> getAllBooks() {
+        return bookRepository.findAll()
+                .stream()
+                .map(bookMapper::toShortResponse)
+                .toList();
+
 
     public Book findByUrl(String  url) {
         return bookRepository.findById(url)
@@ -29,8 +35,4 @@ public class BookService {
 
     }
 
-    // Получение всех типов книг
-    public List<String> getAllBookTypes() {
-        return Arrays.stream(TypeBook.values()).map(TypeBook::getName).toList();
-    }
 }
